commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel.interfaces.lineupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.lineupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2a154f63115dcb91976538421a136ae47ee8bae6
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 79d01ec03eebffe59e5b6d61fc829c329aa4d82b
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116008"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303058"
 items:
 - uid: excel.Excel.Interfaces.LineUpdateData
-  summary: <span data-ttu-id="e2ad1-101">用于更新 line 对象上的数据的接口, 可用于 "line. set (<!-- -->{...}"<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="e2ad1-101">An interface for updating data on the Line object, for use in "line.set(<!-- -->{ ... }<!-- -->)".</span></span>
+  summary: <span data-ttu-id="1f8b3-101">用于更新 line 对象上的数据的接口, 可用于 "line. set (<!-- -->{...}"<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="1f8b3-101">An interface for updating data on the Line object, for use in "line.set(<!-- -->{ ... }<!-- -->)".</span></span>
   name: Excel.Interfaces.LineUpdateData
   fullName: Excel.Interfaces.LineUpdateData
   langs:
@@ -15,13 +15,70 @@ items:
   type: interface
   package: excel
   children:
+  - excel.Excel.Interfaces.LineUpdateData.beginArrowHeadLength
+  - excel.Excel.Interfaces.LineUpdateData.beginArrowHeadStyle
+  - excel.Excel.Interfaces.LineUpdateData.beginArrowHeadWidth
   - excel.Excel.Interfaces.LineUpdateData.connectorType
+  - excel.Excel.Interfaces.LineUpdateData.endArrowHeadLength
+  - excel.Excel.Interfaces.LineUpdateData.endArrowHeadStyle
+  - excel.Excel.Interfaces.LineUpdateData.endArrowHeadWidth
+- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowHeadLength
+  summary: >-
+    <span data-ttu-id="1f8b3-102">表示指定线条开头的箭头的长度。</span><span class="sxs-lookup"><span data-stu-id="1f8b3-102">Represents the length of the arrowhead at the beginning of the specified line.</span></span>
+
+
+    <span data-ttu-id="1f8b3-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f8b3-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginArrowHeadLength
+  fullName: beginArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadLength?: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    return:
+      type:
+      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowHeadStyle
+  summary: >-
+    <span data-ttu-id="1f8b3-104">表示指定线条开头的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="1f8b3-104">Represents the style of the arrowhead at the beginning of the specified line.</span></span>
+
+
+    <span data-ttu-id="1f8b3-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f8b3-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginArrowHeadStyle
+  fullName: beginArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadStyle?: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    return:
+      type:
+      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowHeadWidth
+  summary: >-
+    <span data-ttu-id="1f8b3-106">表示指定线条的起点的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="1f8b3-106">Represents the width of the arrowhead at the beginning of the specified line.</span></span>
+
+
+    <span data-ttu-id="1f8b3-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f8b3-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginArrowHeadWidth
+  fullName: beginArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadWidth?: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    return:
+      type:
+      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
 - uid: excel.Excel.Interfaces.LineUpdateData.connectorType
   summary: >-
-    <span data-ttu-id="e2ad1-102">表示线条的连接线类型。</span><span class="sxs-lookup"><span data-stu-id="e2ad1-102">Represents the connector type for the line.</span></span>
+    <span data-ttu-id="1f8b3-108">表示线条的连接线类型。</span><span class="sxs-lookup"><span data-stu-id="1f8b3-108">Represents the connector type for the line.</span></span>
 
 
-    <span data-ttu-id="e2ad1-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e2ad1-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1f8b3-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f8b3-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: connectorType
   fullName: connectorType
@@ -33,3 +90,54 @@ items:
     return:
       type:
       - Excel.ConnectorType | "Straight" | "Elbow" | "Curve"
+- uid: excel.Excel.Interfaces.LineUpdateData.endArrowHeadLength
+  summary: >-
+    <span data-ttu-id="1f8b3-110">表示指定线条末端的箭头长度。</span><span class="sxs-lookup"><span data-stu-id="1f8b3-110">Represents the length of the arrowhead at the end of the specified line.</span></span>
+
+
+    <span data-ttu-id="1f8b3-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f8b3-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endArrowHeadLength
+  fullName: endArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadLength?: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    return:
+      type:
+      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Interfaces.LineUpdateData.endArrowHeadStyle
+  summary: >-
+    <span data-ttu-id="1f8b3-112">表示指定线条末端的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="1f8b3-112">Represents the style of the arrowhead at the end of the specified line.</span></span>
+
+
+    <span data-ttu-id="1f8b3-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f8b3-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endArrowHeadStyle
+  fullName: endArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadStyle?: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    return:
+      type:
+      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Interfaces.LineUpdateData.endArrowHeadWidth
+  summary: >-
+    <span data-ttu-id="1f8b3-114">表示指定线条末端的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="1f8b3-114">Represents the width of the arrowhead at the end of the specified line.</span></span>
+
+
+    <span data-ttu-id="1f8b3-115">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f8b3-115">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endArrowHeadWidth
+  fullName: endArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadWidth?: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    return:
+      type:
+      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
