--- a/docs/docs-ref-autogen/excel/excel.specialcelltype.yml
+++ b/docs/docs-ref-autogen/excel/excel.specialcelltype.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 11a3d2901f16dd18a7b56fab81707c7f110d2d60
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 347dd02a20c57865b5ea4305e50f7b7bc3d70f8f
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116862"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303233"
 items:
 - uid: excel.Excel.SpecialCellType
-  summary: '<span data-ttu-id="b35cd-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b35cd-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: '<span data-ttu-id="38d88-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38d88-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
   isPreview: true
   name: Excel.SpecialCellType
   fullName: Excel.SpecialCellType
@@ -17,7 +17,6 @@ items:
   package: excel
   children:
   - excel.Excel.SpecialCellType.blanks
-  - excel.Excel.SpecialCellType.comments
   - excel.Excel.SpecialCellType.conditionalFormats
   - excel.Excel.SpecialCellType.constants
   - excel.Excel.SpecialCellType.dataValidations
@@ -26,7 +25,7 @@ items:
   - excel.Excel.SpecialCellType.sameDataValidation
   - excel.Excel.SpecialCellType.visible
 - uid: excel.Excel.SpecialCellType.blanks
-  summary: <span data-ttu-id="b35cd-102">无内容的单元格。</span><span class="sxs-lookup"><span data-stu-id="b35cd-102">Cells with no content.</span></span>
+  summary: <span data-ttu-id="38d88-102">无内容的单元格。</span><span class="sxs-lookup"><span data-stu-id="38d88-102">Cells with no content.</span></span>
   isPreview: true
   name: blanks
   fullName: blanks
@@ -34,17 +33,8 @@ items:
   - typeScript
   type: field
   numericValue: "\"Blanks\""
-- uid: excel.Excel.SpecialCellType.comments
-  summary: <span data-ttu-id="b35cd-103">包含批注的单元格。</span><span class="sxs-lookup"><span data-stu-id="b35cd-103">Cells containing comments.</span></span>
-  isPreview: true
-  name: comments
-  fullName: comments
-  langs:
-  - typeScript
-  type: field
-  numericValue: "\"Comments\""
 - uid: excel.Excel.SpecialCellType.conditionalFormats
-  summary: <span data-ttu-id="b35cd-104">包含条件格式的所有单元格</span><span class="sxs-lookup"><span data-stu-id="b35cd-104">All cells with conditional formats</span></span>
+  summary: <span data-ttu-id="38d88-103">包含条件格式的所有单元格</span><span class="sxs-lookup"><span data-stu-id="38d88-103">All cells with conditional formats</span></span>
   isPreview: true
   name: conditionalFormats
   fullName: conditionalFormats
@@ -53,7 +43,7 @@ items:
   type: field
   numericValue: "\"ConditionalFormats\""
 - uid: excel.Excel.SpecialCellType.constants
-  summary: <span data-ttu-id="b35cd-105">含有常量的单元格。</span><span class="sxs-lookup"><span data-stu-id="b35cd-105">Cells containing constants.</span></span>
+  summary: <span data-ttu-id="38d88-104">含有常量的单元格。</span><span class="sxs-lookup"><span data-stu-id="38d88-104">Cells containing constants.</span></span>
   isPreview: true
   name: constants
   fullName: constants
@@ -62,7 +52,7 @@ items:
   type: field
   numericValue: "\"Constants\""
 - uid: excel.Excel.SpecialCellType.dataValidations
-  summary: <span data-ttu-id="b35cd-106">含有验证条件的单元格。</span><span class="sxs-lookup"><span data-stu-id="b35cd-106">Cells having validation criteria.</span></span>
+  summary: <span data-ttu-id="38d88-105">含有验证条件的单元格。</span><span class="sxs-lookup"><span data-stu-id="38d88-105">Cells having validation criteria.</span></span>
   isPreview: true
   name: dataValidations
   fullName: dataValidations
@@ -71,7 +61,7 @@ items:
   type: field
   numericValue: "\"DataValidations\""
 - uid: excel.Excel.SpecialCellType.formulas
-  summary: <span data-ttu-id="b35cd-107">含有公式的单元格。</span><span class="sxs-lookup"><span data-stu-id="b35cd-107">Cells containing formulas.</span></span>
+  summary: <span data-ttu-id="38d88-106">含有公式的单元格。</span><span class="sxs-lookup"><span data-stu-id="38d88-106">Cells containing formulas.</span></span>
   isPreview: true
   name: formulas
   fullName: formulas
@@ -80,7 +70,7 @@ items:
   type: field
   numericValue: "\"Formulas\""
 - uid: excel.Excel.SpecialCellType.sameConditionalFormat
-  summary: <span data-ttu-id="b35cd-108">与区域中的第一个单元格具有相同条件格式的单元格。</span><span class="sxs-lookup"><span data-stu-id="b35cd-108">Cells having the same conditional format as the first cell in the range.</span></span>
+  summary: <span data-ttu-id="38d88-107">与区域中的第一个单元格具有相同条件格式的单元格。</span><span class="sxs-lookup"><span data-stu-id="38d88-107">Cells having the same conditional format as the first cell in the range.</span></span>
   isPreview: true
   name: sameConditionalFormat
   fullName: sameConditionalFormat
@@ -89,7 +79,7 @@ items:
   type: field
   numericValue: "\"SameConditionalFormat\""
 - uid: excel.Excel.SpecialCellType.sameDataValidation
-  summary: <span data-ttu-id="b35cd-109">与区域中的第一个单元格具有相同的数据有效性条件的单元格。</span><span class="sxs-lookup"><span data-stu-id="b35cd-109">Cells having the same data validation criteria as the first cell in the range.</span></span>
+  summary: <span data-ttu-id="38d88-108">与区域中的第一个单元格具有相同的数据有效性条件的单元格。</span><span class="sxs-lookup"><span data-stu-id="38d88-108">Cells having the same data validation criteria as the first cell in the range.</span></span>
   isPreview: true
   name: sameDataValidation
   fullName: sameDataValidation
@@ -98,7 +88,7 @@ items:
   type: field
   numericValue: "\"SameDataValidation\""
 - uid: excel.Excel.SpecialCellType.visible
-  summary: <span data-ttu-id="b35cd-110">可见的单元格。</span><span class="sxs-lookup"><span data-stu-id="b35cd-110">Cells that are visible.</span></span>
+  summary: <span data-ttu-id="38d88-109">可见的单元格。</span><span class="sxs-lookup"><span data-stu-id="38d88-109">Cells that are visible.</span></span>
   isPreview: true
   name: visible
   fullName: visible
