--- a/docs/docs-ref-autogen/excel/excel.tablechangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.tablechangedeventargs.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: da34fd80d62a1f712348d13da2af01295c997434
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: 53da1fab6e6bcad84b8b6ea2deda89d6023649ae
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29981540"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303065"
 items:
 - uid: excel.Excel.TableChangedEventArgs
   summary: >-
-    <span data-ttu-id="2c427-101">提供有关引发 Changed 事件的表的信息。</span><span class="sxs-lookup"><span data-stu-id="2c427-101">Provides information about the table that raised the Changed event.</span></span>
+    <span data-ttu-id="ba29f-101">提供有关引发 Changed 事件的表的信息。</span><span class="sxs-lookup"><span data-stu-id="ba29f-101">Provides information about the table that raised the Changed event.</span></span>
 
 
-    <span data-ttu-id="2c427-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c427-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba29f-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba29f-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.TableChangedEventArgs
   fullName: Excel.TableChangedEventArgs
   langs:
@@ -23,16 +23,17 @@ items:
   - excel.Excel.TableChangedEventArgs.getRangeOrNullObject
   - excel.Excel.TableChangedEventArgs.address
   - excel.Excel.TableChangedEventArgs.changeType
+  - excel.Excel.TableChangedEventArgs.details
   - excel.Excel.TableChangedEventArgs.source
   - excel.Excel.TableChangedEventArgs.tableId
   - excel.Excel.TableChangedEventArgs.type
   - excel.Excel.TableChangedEventArgs.worksheetId
 - uid: excel.Excel.TableChangedEventArgs.getRange
   summary: >-
-    <span data-ttu-id="2c427-103">获取代表特定工作表的表的更改的区域的区域。</span><span class="sxs-lookup"><span data-stu-id="2c427-103">Gets the range that represents the changed area of a table on a specific worksheet.</span></span>
+    <span data-ttu-id="ba29f-103">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="ba29f-103">Gets the range that represents the changed area of a table on a specific worksheet.</span></span>
 
 
-    <span data-ttu-id="2c427-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c427-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba29f-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba29f-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getRange(ctx)
   fullName: getRange(ctx)
   langs:
@@ -51,10 +52,10 @@ items:
       - excel.Excel.RequestContext
 - uid: excel.Excel.TableChangedEventArgs.getRangeOrNullObject
   summary: >-
-    <span data-ttu-id="2c427-105">获取代表特定工作表的表的更改的区域的区域。</span><span class="sxs-lookup"><span data-stu-id="2c427-105">Gets the range that represents the changed area of a table on a specific worksheet.</span></span> <span data-ttu-id="2c427-106">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="2c427-106">It might return null object.</span></span>
+    <span data-ttu-id="ba29f-105">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="ba29f-105">Gets the range that represents the changed area of a table on a specific worksheet.</span></span> <span data-ttu-id="ba29f-106">它可能返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="ba29f-106">It might return null object.</span></span>
 
 
-    <span data-ttu-id="2c427-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c427-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba29f-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba29f-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getRangeOrNullObject(ctx)
   fullName: getRangeOrNullObject(ctx)
   langs:
@@ -73,10 +74,10 @@ items:
       - excel.Excel.RequestContext
 - uid: excel.Excel.TableChangedEventArgs.address
   summary: >-
-    <span data-ttu-id="2c427-108">获取地址，该地址表示特定工作表上的表格的更改区域。</span><span class="sxs-lookup"><span data-stu-id="2c427-108">Gets the address that represents the changed area of a table on a specific worksheet.</span></span>
+    <span data-ttu-id="ba29f-108">获取地址，该地址表示特定工作表上的表格的更改区域。</span><span class="sxs-lookup"><span data-stu-id="ba29f-108">Gets the address that represents the changed area of a table on a specific worksheet.</span></span>
 
 
-    <span data-ttu-id="2c427-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c427-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba29f-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba29f-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: address
   fullName: address
   langs:
@@ -89,10 +90,10 @@ items:
       - string
 - uid: excel.Excel.TableChangedEventArgs.changeType
   summary: >-
-    <span data-ttu-id="2c427-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="2c427-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="2c427-111">有关详细信息，请参阅 Excel.DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="2c427-111">See Excel.DataChangeType for details.</span></span>
+    <span data-ttu-id="ba29f-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="ba29f-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="ba29f-111">有关详细信息, 请参阅 DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="ba29f-111">See Excel.DataChangeType for details.</span></span>
 
 
-    <span data-ttu-id="2c427-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c427-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba29f-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba29f-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: changeType
   fullName: changeType
   langs:
@@ -103,12 +104,28 @@ items:
     return:
       type:
       - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
+- uid: excel.Excel.TableChangedEventArgs.details
+  summary: >-
+    <span data-ttu-id="ba29f-113">代表有关更改详细信息的信息</span><span class="sxs-lookup"><span data-stu-id="ba29f-113">Represents the information about the change detail</span></span>
+
+
+    <span data-ttu-id="ba29f-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba29f-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  name: details
+  fullName: details
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'details: Excel.ChangedEventDetail;'
+    return:
+      type:
+      - excel.Excel.ChangedEventDetail
 - uid: excel.Excel.TableChangedEventArgs.source
   summary: >-
-    <span data-ttu-id="2c427-113">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="2c427-113">Gets the source of the event.</span></span> <span data-ttu-id="2c427-114">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="2c427-114">See Excel.EventSource for details.</span></span>
+    <span data-ttu-id="ba29f-115">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="ba29f-115">Gets the source of the event.</span></span> <span data-ttu-id="ba29f-116">有关详细信息, 请参阅 "Excel. EventSource"。</span><span class="sxs-lookup"><span data-stu-id="ba29f-116">See Excel.EventSource for details.</span></span>
 
 
-    <span data-ttu-id="2c427-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c427-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba29f-117">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba29f-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: source
   fullName: source
   langs:
@@ -121,10 +138,10 @@ items:
       - Excel.EventSource | "Local" | "Remote"
 - uid: excel.Excel.TableChangedEventArgs.tableId
   summary: >-
-    <span data-ttu-id="2c427-116">获取其中的数据发生更改的表格的 ID。</span><span class="sxs-lookup"><span data-stu-id="2c427-116">Gets the id of the table in which the data changed.</span></span>
+    <span data-ttu-id="ba29f-118">获取其中的数据发生更改的表格的 ID。</span><span class="sxs-lookup"><span data-stu-id="ba29f-118">Gets the id of the table in which the data changed.</span></span>
 
 
-    <span data-ttu-id="2c427-117">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c427-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba29f-119">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba29f-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: tableId
   fullName: tableId
   langs:
@@ -135,13 +152,13 @@ items:
     return:
       type:
       - string
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"2c427-118\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"2c427-118\">Examples</span></span>\n\n```typescript\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered. Data changed address: \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"ba29f-120\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"ba29f-120\">Examples</span></span>\n\n```typescript\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered. Data changed address: \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
 - uid: excel.Excel.TableChangedEventArgs.type
   summary: >-
-    <span data-ttu-id="2c427-119">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="2c427-119">Gets the type of the event.</span></span> <span data-ttu-id="2c427-120">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="2c427-120">See Excel.EventType for details.</span></span>
+    <span data-ttu-id="ba29f-121">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="ba29f-121">Gets the type of the event.</span></span> <span data-ttu-id="ba29f-122">有关详细信息, 请参阅 "Excel. 事件"。</span><span class="sxs-lookup"><span data-stu-id="ba29f-122">See Excel.EventType for details.</span></span>
 
 
-    <span data-ttu-id="2c427-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c427-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba29f-123">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba29f-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: type
   fullName: type
   langs:
@@ -154,10 +171,10 @@ items:
       - "\"TableChanged\""
 - uid: excel.Excel.TableChangedEventArgs.worksheetId
   summary: >-
-    <span data-ttu-id="2c427-122">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="2c427-122">Gets the id of the worksheet in which the data changed.</span></span>
+    <span data-ttu-id="ba29f-124">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="ba29f-124">Gets the id of the worksheet in which the data changed.</span></span>
 
 
-    <span data-ttu-id="2c427-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c427-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="ba29f-125">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ba29f-125">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: worksheetId
   fullName: worksheetId
   langs:
@@ -168,4 +185,4 @@ items:
     return:
       type:
       - string
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"2c427-124\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"2c427-124\">Examples</span></span>\n\n```typescript\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered. Data changed address: \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"ba29f-126\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"ba29f-126\">Examples</span></span>\n\n```typescript\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered. Data changed address: \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
