--- a/docs/docs-ref-autogen/excel/excel.interfaces.linedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.linedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f13481c424ed9d3de441cbcf315e691e92fe4ed0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: a27a7848b3bc7652933445f8c32da9a40c84453b
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116960"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303009"
 items:
 - uid: excel.Excel.Interfaces.LineData
-  summary: <span data-ttu-id="0bb05-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="0bb05-101">An interface describing the data returned by calling "line.toJSON()".</span></span>
+  summary: <span data-ttu-id="fd45f-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="fd45f-101">An interface describing the data returned by calling "line.toJSON()".</span></span>
   name: Excel.Interfaces.LineData
   fullName: Excel.Interfaces.LineData
   langs:
@@ -15,14 +15,92 @@ items:
   type: interface
   package: excel
   children:
+  - excel.Excel.Interfaces.LineData.beginArrowHeadLength
+  - excel.Excel.Interfaces.LineData.beginArrowHeadStyle
+  - excel.Excel.Interfaces.LineData.beginArrowHeadWidth
+  - excel.Excel.Interfaces.LineData.beginConnectedSite
   - excel.Excel.Interfaces.LineData.connectorType
+  - excel.Excel.Interfaces.LineData.endArrowHeadLength
+  - excel.Excel.Interfaces.LineData.endArrowHeadStyle
+  - excel.Excel.Interfaces.LineData.endArrowHeadWidth
+  - excel.Excel.Interfaces.LineData.endConnectedSite
   - excel.Excel.Interfaces.LineData.id
+  - excel.Excel.Interfaces.LineData.isBeginConnected
+  - excel.Excel.Interfaces.LineData.isEndConnected
+- uid: excel.Excel.Interfaces.LineData.beginArrowHeadLength
+  summary: >-
+    <span data-ttu-id="fd45f-102">表示指定线条开头的箭头的长度。</span><span class="sxs-lookup"><span data-stu-id="fd45f-102">Represents the length of the arrowhead at the beginning of the specified line.</span></span>
+
+
+    <span data-ttu-id="fd45f-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginArrowHeadLength
+  fullName: beginArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadLength?: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    return:
+      type:
+      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Interfaces.LineData.beginArrowHeadStyle
+  summary: >-
+    <span data-ttu-id="fd45f-104">表示指定线条开头的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="fd45f-104">Represents the style of the arrowhead at the beginning of the specified line.</span></span>
+
+
+    <span data-ttu-id="fd45f-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginArrowHeadStyle
+  fullName: beginArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadStyle?: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    return:
+      type:
+      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Interfaces.LineData.beginArrowHeadWidth
+  summary: >-
+    <span data-ttu-id="fd45f-106">表示指定线条的起点的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="fd45f-106">Represents the width of the arrowhead at the beginning of the specified line.</span></span>
+
+
+    <span data-ttu-id="fd45f-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginArrowHeadWidth
+  fullName: beginArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadWidth?: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    return:
+      type:
+      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
+- uid: excel.Excel.Interfaces.LineData.beginConnectedSite
+  summary: >-
+    <span data-ttu-id="fd45f-108">表示一个整数, 该整数指定连接符的起点所连接到的连接站点。</span><span class="sxs-lookup"><span data-stu-id="fd45f-108">Represents an integer that specifies the connection site that the beginning of a connector is connected to.</span></span> <span data-ttu-id="fd45f-109">只读。</span><span class="sxs-lookup"><span data-stu-id="fd45f-109">Read-only.</span></span> <span data-ttu-id="fd45f-110">如果行的开头未附加到任何形状, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="fd45f-110">Returns null when the beginning of the line is not attached to any shape.</span></span>
+
+
+    <span data-ttu-id="fd45f-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginConnectedSite
+  fullName: beginConnectedSite
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginConnectedSite?: number;'
+    return:
+      type:
+      - number
 - uid: excel.Excel.Interfaces.LineData.connectorType
   summary: >-
-    <span data-ttu-id="0bb05-102">表示线条的连接线类型。</span><span class="sxs-lookup"><span data-stu-id="0bb05-102">Represents the connector type for the line.</span></span>
+    <span data-ttu-id="fd45f-112">表示线条的连接线类型。</span><span class="sxs-lookup"><span data-stu-id="fd45f-112">Represents the connector type for the line.</span></span>
 
 
-    <span data-ttu-id="0bb05-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0bb05-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="fd45f-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: connectorType
   fullName: connectorType
@@ -34,12 +112,80 @@ items:
     return:
       type:
       - Excel.ConnectorType | "Straight" | "Elbow" | "Curve"
+- uid: excel.Excel.Interfaces.LineData.endArrowHeadLength
+  summary: >-
+    <span data-ttu-id="fd45f-114">表示指定线条末端的箭头长度。</span><span class="sxs-lookup"><span data-stu-id="fd45f-114">Represents the length of the arrowhead at the end of the specified line.</span></span>
+
+
+    <span data-ttu-id="fd45f-115">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-115">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endArrowHeadLength
+  fullName: endArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadLength?: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    return:
+      type:
+      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Interfaces.LineData.endArrowHeadStyle
+  summary: >-
+    <span data-ttu-id="fd45f-116">表示指定线条末端的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="fd45f-116">Represents the style of the arrowhead at the end of the specified line.</span></span>
+
+
+    <span data-ttu-id="fd45f-117">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-117">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endArrowHeadStyle
+  fullName: endArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadStyle?: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    return:
+      type:
+      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Interfaces.LineData.endArrowHeadWidth
+  summary: >-
+    <span data-ttu-id="fd45f-118">表示指定线条末端的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="fd45f-118">Represents the width of the arrowhead at the end of the specified line.</span></span>
+
+
+    <span data-ttu-id="fd45f-119">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-119">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endArrowHeadWidth
+  fullName: endArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadWidth?: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    return:
+      type:
+      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
+- uid: excel.Excel.Interfaces.LineData.endConnectedSite
+  summary: >-
+    <span data-ttu-id="fd45f-120">表示一个整数, 该整数指定连接符的终点所连接到的连接站点。</span><span class="sxs-lookup"><span data-stu-id="fd45f-120">Represents an integer that specifies the connection site that the end of a connector is connected to.</span></span> <span data-ttu-id="fd45f-121">只读。</span><span class="sxs-lookup"><span data-stu-id="fd45f-121">Read-only.</span></span> <span data-ttu-id="fd45f-122">如果行的末尾未附加到任何形状, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="fd45f-122">Returns null when the end of the line is not attached to any shape.</span></span>
+
+
+    <span data-ttu-id="fd45f-123">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-123">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endConnectedSite
+  fullName: endConnectedSite
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endConnectedSite?: number;'
+    return:
+      type:
+      - number
 - uid: excel.Excel.Interfaces.LineData.id
   summary: >-
-    <span data-ttu-id="0bb05-104">代表形状标识符。</span><span class="sxs-lookup"><span data-stu-id="0bb05-104">Represents the shape identifier.</span></span> <span data-ttu-id="0bb05-105">只读。</span><span class="sxs-lookup"><span data-stu-id="0bb05-105">Read-only.</span></span>
+    <span data-ttu-id="fd45f-124">代表形状标识符。</span><span class="sxs-lookup"><span data-stu-id="fd45f-124">Represents the shape identifier.</span></span> <span data-ttu-id="fd45f-125">只读。</span><span class="sxs-lookup"><span data-stu-id="fd45f-125">Read-only.</span></span>
 
 
-    <span data-ttu-id="0bb05-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0bb05-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="fd45f-126">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-126">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -51,3 +197,37 @@ items:
     return:
       type:
       - string
+- uid: excel.Excel.Interfaces.LineData.isBeginConnected
+  summary: >-
+    <span data-ttu-id="fd45f-127">表示指定的行的开头是否连接到形状。</span><span class="sxs-lookup"><span data-stu-id="fd45f-127">Represents whether the beginning of the specified line is connected to a shape.</span></span> <span data-ttu-id="fd45f-128">只读。</span><span class="sxs-lookup"><span data-stu-id="fd45f-128">Read-only.</span></span>
+
+
+    <span data-ttu-id="fd45f-129">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-129">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: isBeginConnected
+  fullName: isBeginConnected
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'isBeginConnected?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineData.isEndConnected
+  summary: >-
+    <span data-ttu-id="fd45f-130">表示指定线条的终点是否连接到形状。</span><span class="sxs-lookup"><span data-stu-id="fd45f-130">Represents whether the end of the specified line is connected to a shape.</span></span> <span data-ttu-id="fd45f-131">只读。</span><span class="sxs-lookup"><span data-stu-id="fd45f-131">Read-only.</span></span>
+
+
+    <span data-ttu-id="fd45f-132">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd45f-132">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: isEndConnected
+  fullName: isEndConnected
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'isEndConnected?: boolean;'
+    return:
+      type:
+      - boolean
