--- a/docs/docs-ref-autogen/excel/excel.interfaces.lineloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.lineloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3a6083559f5ddc338640dbdcbc188fdb5a968472
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 7ecee767a1dfdc9ec4bcd13b4ea668627a58275f
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108168"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303100"
 items:
 - uid: excel.Excel.Interfaces.LineLoadOptions
   summary: >-
-    <span data-ttu-id="96d65-101">代表工作表中的 Line 对象。</span><span class="sxs-lookup"><span data-stu-id="96d65-101">Represents a Line object inside a worksheet.</span></span>
+    <span data-ttu-id="b2083-101">代表工作表中的 Line 对象。</span><span class="sxs-lookup"><span data-stu-id="b2083-101">Represents a Line object inside a worksheet.</span></span>
 
 
-    <span data-ttu-id="96d65-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="96d65-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="b2083-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.LineLoadOptions
   fullName: Excel.Interfaces.LineLoadOptions
@@ -21,8 +21,20 @@ items:
   package: excel
   children:
   - excel.Excel.Interfaces.LineLoadOptions.$all
+  - excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadLength
+  - excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadStyle
+  - excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadWidth
+  - excel.Excel.Interfaces.LineLoadOptions.beginConnectedShape
+  - excel.Excel.Interfaces.LineLoadOptions.beginConnectedSite
   - excel.Excel.Interfaces.LineLoadOptions.connectorType
+  - excel.Excel.Interfaces.LineLoadOptions.endArrowHeadLength
+  - excel.Excel.Interfaces.LineLoadOptions.endArrowHeadStyle
+  - excel.Excel.Interfaces.LineLoadOptions.endArrowHeadWidth
+  - excel.Excel.Interfaces.LineLoadOptions.endConnectedShape
+  - excel.Excel.Interfaces.LineLoadOptions.endConnectedSite
   - excel.Excel.Interfaces.LineLoadOptions.id
+  - excel.Excel.Interfaces.LineLoadOptions.isBeginConnected
+  - excel.Excel.Interfaces.LineLoadOptions.isEndConnected
   - excel.Excel.Interfaces.LineLoadOptions.shape
 - uid: excel.Excel.Interfaces.LineLoadOptions.$all
   isPreview: true
@@ -36,12 +48,97 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadLength
+  summary: >-
+    <span data-ttu-id="b2083-103">表示指定线条开头的箭头的长度。</span><span class="sxs-lookup"><span data-stu-id="b2083-103">Represents the length of the arrowhead at the beginning of the specified line.</span></span>
+
+
+    <span data-ttu-id="b2083-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginArrowHeadLength
+  fullName: beginArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadLength?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadStyle
+  summary: >-
+    <span data-ttu-id="b2083-105">表示指定线条开头的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="b2083-105">Represents the style of the arrowhead at the beginning of the specified line.</span></span>
+
+
+    <span data-ttu-id="b2083-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginArrowHeadStyle
+  fullName: beginArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadStyle?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadWidth
+  summary: >-
+    <span data-ttu-id="b2083-107">表示指定线条的起点的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="b2083-107">Represents the width of the arrowhead at the beginning of the specified line.</span></span>
+
+
+    <span data-ttu-id="b2083-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginArrowHeadWidth
+  fullName: beginArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadWidth?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.beginConnectedShape
+  summary: >-
+    <span data-ttu-id="b2083-109">表示指定的行的起点所附加到的 shape 对象。</span><span class="sxs-lookup"><span data-stu-id="b2083-109">Represents the shape object that the beginning of the specified line is attached to.</span></span>
+
+
+    <span data-ttu-id="b2083-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginConnectedShape
+  fullName: beginConnectedShape
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginConnectedShape?: Excel.Interfaces.ShapeLoadOptions;'
+    return:
+      type:
+      - excel.Excel.Interfaces.ShapeLoadOptions
+- uid: excel.Excel.Interfaces.LineLoadOptions.beginConnectedSite
+  summary: >-
+    <span data-ttu-id="b2083-111">表示一个整数, 该整数指定连接符的起点所连接到的连接站点。</span><span class="sxs-lookup"><span data-stu-id="b2083-111">Represents an integer that specifies the connection site that the beginning of a connector is connected to.</span></span> <span data-ttu-id="b2083-112">只读。</span><span class="sxs-lookup"><span data-stu-id="b2083-112">Read-only.</span></span> <span data-ttu-id="b2083-113">如果行的开头未附加到任何形状, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="b2083-113">Returns null when the beginning of the line is not attached to any shape.</span></span>
+
+
+    <span data-ttu-id="b2083-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: beginConnectedSite
+  fullName: beginConnectedSite
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginConnectedSite?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.LineLoadOptions.connectorType
   summary: >-
-    <span data-ttu-id="96d65-103">表示线条的连接线类型。</span><span class="sxs-lookup"><span data-stu-id="96d65-103">Represents the connector type for the line.</span></span>
+    <span data-ttu-id="b2083-115">表示线条的连接线类型。</span><span class="sxs-lookup"><span data-stu-id="b2083-115">Represents the connector type for the line.</span></span>
 
 
-    <span data-ttu-id="96d65-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="96d65-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="b2083-116">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: connectorType
   fullName: connectorType
@@ -53,12 +150,97 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.endArrowHeadLength
+  summary: >-
+    <span data-ttu-id="b2083-117">表示指定线条末端的箭头长度。</span><span class="sxs-lookup"><span data-stu-id="b2083-117">Represents the length of the arrowhead at the end of the specified line.</span></span>
+
+
+    <span data-ttu-id="b2083-118">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-118">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endArrowHeadLength
+  fullName: endArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadLength?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.endArrowHeadStyle
+  summary: >-
+    <span data-ttu-id="b2083-119">表示指定线条末端的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="b2083-119">Represents the style of the arrowhead at the end of the specified line.</span></span>
+
+
+    <span data-ttu-id="b2083-120">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-120">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endArrowHeadStyle
+  fullName: endArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadStyle?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.endArrowHeadWidth
+  summary: >-
+    <span data-ttu-id="b2083-121">表示指定线条末端的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="b2083-121">Represents the width of the arrowhead at the end of the specified line.</span></span>
+
+
+    <span data-ttu-id="b2083-122">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-122">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endArrowHeadWidth
+  fullName: endArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadWidth?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.endConnectedShape
+  summary: >-
+    <span data-ttu-id="b2083-123">代表指定行的终点所附加到的 shape 对象。</span><span class="sxs-lookup"><span data-stu-id="b2083-123">Represents the shape object that the end of the specified line is attached to.</span></span>
+
+
+    <span data-ttu-id="b2083-124">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-124">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endConnectedShape
+  fullName: endConnectedShape
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endConnectedShape?: Excel.Interfaces.ShapeLoadOptions;'
+    return:
+      type:
+      - excel.Excel.Interfaces.ShapeLoadOptions
+- uid: excel.Excel.Interfaces.LineLoadOptions.endConnectedSite
+  summary: >-
+    <span data-ttu-id="b2083-125">表示一个整数, 该整数指定连接符的终点所连接到的连接站点。</span><span class="sxs-lookup"><span data-stu-id="b2083-125">Represents an integer that specifies the connection site that the end of a connector is connected to.</span></span> <span data-ttu-id="b2083-126">只读。</span><span class="sxs-lookup"><span data-stu-id="b2083-126">Read-only.</span></span> <span data-ttu-id="b2083-127">如果行的末尾未附加到任何形状, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="b2083-127">Returns null when the end of the line is not attached to any shape.</span></span>
+
+
+    <span data-ttu-id="b2083-128">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-128">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: endConnectedSite
+  fullName: endConnectedSite
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endConnectedSite?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.LineLoadOptions.id
   summary: >-
-    <span data-ttu-id="96d65-105">代表形状标识符。</span><span class="sxs-lookup"><span data-stu-id="96d65-105">Represents the shape identifier.</span></span> <span data-ttu-id="96d65-106">只读。</span><span class="sxs-lookup"><span data-stu-id="96d65-106">Read-only.</span></span>
+    <span data-ttu-id="b2083-129">代表形状标识符。</span><span class="sxs-lookup"><span data-stu-id="b2083-129">Represents the shape identifier.</span></span> <span data-ttu-id="b2083-130">只读。</span><span class="sxs-lookup"><span data-stu-id="b2083-130">Read-only.</span></span>
 
 
-    <span data-ttu-id="96d65-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="96d65-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="b2083-131">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-131">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -70,12 +252,46 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.isBeginConnected
+  summary: >-
+    <span data-ttu-id="b2083-132">表示指定的行的开头是否连接到形状。</span><span class="sxs-lookup"><span data-stu-id="b2083-132">Represents whether the beginning of the specified line is connected to a shape.</span></span> <span data-ttu-id="b2083-133">只读。</span><span class="sxs-lookup"><span data-stu-id="b2083-133">Read-only.</span></span>
+
+
+    <span data-ttu-id="b2083-134">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-134">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: isBeginConnected
+  fullName: isBeginConnected
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'isBeginConnected?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.isEndConnected
+  summary: >-
+    <span data-ttu-id="b2083-135">表示指定线条的终点是否连接到形状。</span><span class="sxs-lookup"><span data-stu-id="b2083-135">Represents whether the end of the specified line is connected to a shape.</span></span> <span data-ttu-id="b2083-136">只读。</span><span class="sxs-lookup"><span data-stu-id="b2083-136">Read-only.</span></span>
+
+
+    <span data-ttu-id="b2083-137">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-137">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  isPreview: true
+  name: isEndConnected
+  fullName: isEndConnected
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'isEndConnected?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.LineLoadOptions.shape
   summary: >-
-    <span data-ttu-id="96d65-108">返回线条的形状对象。</span><span class="sxs-lookup"><span data-stu-id="96d65-108">Returns the shape object for the line.</span></span>
+    <span data-ttu-id="b2083-138">返回线条的形状对象。</span><span class="sxs-lookup"><span data-stu-id="b2083-138">Returns the shape object for the line.</span></span>
 
 
-    <span data-ttu-id="96d65-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="96d65-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="b2083-139">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2083-139">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: shape
   fullName: shape
