--- a/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemcollectionloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5f92c28ff5760b19c13476001396935d07683168
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: fb5d8d8a8901f19ba8a2bab89830159b8ef479a6
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113873"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303072"
 items:
 - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions
   summary: >-
-    <span data-ttu-id="63293-101">表示切片器上所有切片器项目对象的集合。</span><span class="sxs-lookup"><span data-stu-id="63293-101">Represents a collection of all the slicer item objects on the slicer.</span></span>
+    <span data-ttu-id="38e7c-101">表示切片器上所有切片器项目对象的集合。</span><span class="sxs-lookup"><span data-stu-id="38e7c-101">Represents a collection of all the slicer item objects on the slicer.</span></span>
 
 
-    <span data-ttu-id="63293-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63293-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="38e7c-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38e7c-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.SlicerItemCollectionLoadOptions
   fullName: Excel.Interfaces.SlicerItemCollectionLoadOptions
@@ -39,10 +39,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions.hasData
   summary: >-
-    <span data-ttu-id="63293-103">对于集合中的每一项: 如果切片器项包含数据, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="63293-103">For EACH ITEM in the collection: True if the slicer item has data.</span></span>
+    <span data-ttu-id="38e7c-103">对于集合中的每一项: 如果切片器项包含数据, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="38e7c-103">For EACH ITEM in the collection: True if the slicer item has data.</span></span>
 
 
-    <span data-ttu-id="63293-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63293-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="38e7c-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38e7c-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: hasData
   fullName: hasData
@@ -56,10 +56,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions.isSelected
   summary: >-
-    <span data-ttu-id="63293-105">对于集合中的每一项: 如果选择了切片器项, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="63293-105">For EACH ITEM in the collection: True if the slicer item is selected.</span></span> <span data-ttu-id="63293-106">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="63293-106">Setting this value will not clear other SlicerItems' selected state.</span></span>
+    <span data-ttu-id="38e7c-105">对于集合中的每一项: 如果选择了切片器项, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="38e7c-105">For EACH ITEM in the collection: True if the slicer item is selected.</span></span> <span data-ttu-id="38e7c-106">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="38e7c-106">Setting this value will not clear other SlicerItems' selected state.</span></span> <span data-ttu-id="38e7c-107">默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。</span><span class="sxs-lookup"><span data-stu-id="38e7c-107">By default, if the slicer item is the only one selected, when it is deselected, all items will be selected.</span></span>
 
 
-    <span data-ttu-id="63293-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63293-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="38e7c-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38e7c-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isSelected
   fullName: isSelected
@@ -73,10 +73,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions.key
   summary: >-
-    <span data-ttu-id="63293-108">对于集合中的每一项: 表示切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="63293-108">For EACH ITEM in the collection: Represents the unique value representing the slicer item.</span></span>
+    <span data-ttu-id="38e7c-109">对于集合中的每一项: 表示切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="38e7c-109">For EACH ITEM in the collection: Represents the unique value representing the slicer item.</span></span>
 
 
-    <span data-ttu-id="63293-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63293-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="38e7c-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38e7c-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: key
   fullName: key
@@ -90,10 +90,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions.name
   summary: >-
-    <span data-ttu-id="63293-110">对于集合中的每一项: 表示显示在 UI 上的值。</span><span class="sxs-lookup"><span data-stu-id="63293-110">For EACH ITEM in the collection: Represents the value displayed on UI.</span></span>
+    <span data-ttu-id="38e7c-111">对于集合中的每一项: 表示显示在 UI 上的值。</span><span class="sxs-lookup"><span data-stu-id="38e7c-111">For EACH ITEM in the collection: Represents the value displayed on UI.</span></span>
 
 
-    <span data-ttu-id="63293-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63293-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="38e7c-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38e7c-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: name
   fullName: name
