--- a/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7319b5ef096ae50c778a16a6e1e4c7af65d8cd52
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 47996ad4ba808909b8282a26ec4e4b5d9ecaeee6
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117436"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303016"
 items:
 - uid: excel.Excel.Interfaces.SlicerItemData
-  summary: <span data-ttu-id="0a206-101">描述通过调用 "slicerItem ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="0a206-101">An interface describing the data returned by calling "slicerItem.toJSON()".</span></span>
+  summary: <span data-ttu-id="6dbb5-101">描述通过调用 "slicerItem ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="6dbb5-101">An interface describing the data returned by calling "slicerItem.toJSON()".</span></span>
   name: Excel.Interfaces.SlicerItemData
   fullName: Excel.Interfaces.SlicerItemData
   langs:
@@ -21,10 +21,10 @@ items:
   - excel.Excel.Interfaces.SlicerItemData.name
 - uid: excel.Excel.Interfaces.SlicerItemData.hasData
   summary: >-
-    <span data-ttu-id="0a206-102">如果切片器项包含数据, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="0a206-102">True if the slicer item has data.</span></span>
+    <span data-ttu-id="6dbb5-102">如果切片器项包含数据, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="6dbb5-102">True if the slicer item has data.</span></span>
 
 
-    <span data-ttu-id="0a206-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0a206-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6dbb5-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6dbb5-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: hasData
   fullName: hasData
@@ -38,10 +38,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemData.isSelected
   summary: >-
-    <span data-ttu-id="0a206-104">如果选择了切片器项, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="0a206-104">True if the slicer item is selected.</span></span> <span data-ttu-id="0a206-105">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="0a206-105">Setting this value will not clear other SlicerItems' selected state.</span></span>
+    <span data-ttu-id="6dbb5-104">如果选择了切片器项, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="6dbb5-104">True if the slicer item is selected.</span></span> <span data-ttu-id="6dbb5-105">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="6dbb5-105">Setting this value will not clear other SlicerItems' selected state.</span></span> <span data-ttu-id="6dbb5-106">默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。</span><span class="sxs-lookup"><span data-stu-id="6dbb5-106">By default, if the slicer item is the only one selected, when it is deselected, all items will be selected.</span></span>
 
 
-    <span data-ttu-id="0a206-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0a206-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6dbb5-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6dbb5-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isSelected
   fullName: isSelected
@@ -55,10 +55,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemData.key
   summary: >-
-    <span data-ttu-id="0a206-107">表示表示切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="0a206-107">Represents the unique value representing the slicer item.</span></span>
+    <span data-ttu-id="6dbb5-108">表示表示切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="6dbb5-108">Represents the unique value representing the slicer item.</span></span>
 
 
-    <span data-ttu-id="0a206-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0a206-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6dbb5-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6dbb5-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: key
   fullName: key
@@ -72,10 +72,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.SlicerItemData.name
   summary: >-
-    <span data-ttu-id="0a206-109">表示显示在 UI 上的值。</span><span class="sxs-lookup"><span data-stu-id="0a206-109">Represents the value displayed on UI.</span></span>
+    <span data-ttu-id="6dbb5-110">表示显示在 UI 上的值。</span><span class="sxs-lookup"><span data-stu-id="6dbb5-110">Represents the value displayed on UI.</span></span>
 
 
-    <span data-ttu-id="0a206-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0a206-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6dbb5-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6dbb5-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: name
   fullName: name
