--- a/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0aeaedc90b4047d7de0a749f5f63b4b2377eda11
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 7fcd2d640c67f61a0374bf02fcec2237da324384
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109512"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303345"
 items:
 - uid: excel.Excel.Interfaces.SlicerItemLoadOptions
   summary: >-
-    <span data-ttu-id="4f232-101">表示切片器中的切片器项目。</span><span class="sxs-lookup"><span data-stu-id="4f232-101">Represents a slicer item in a slicer.</span></span>
+    <span data-ttu-id="395d8-101">表示切片器中的切片器项目。</span><span class="sxs-lookup"><span data-stu-id="395d8-101">Represents a slicer item in a slicer.</span></span>
 
 
-    <span data-ttu-id="4f232-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4f232-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="395d8-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="395d8-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.SlicerItemLoadOptions
   fullName: Excel.Interfaces.SlicerItemLoadOptions
@@ -39,10 +39,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemLoadOptions.hasData
   summary: >-
-    <span data-ttu-id="4f232-103">如果切片器项包含数据, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="4f232-103">True if the slicer item has data.</span></span>
+    <span data-ttu-id="395d8-103">如果切片器项包含数据, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="395d8-103">True if the slicer item has data.</span></span>
 
 
-    <span data-ttu-id="4f232-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4f232-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="395d8-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="395d8-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: hasData
   fullName: hasData
@@ -56,10 +56,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemLoadOptions.isSelected
   summary: >-
-    <span data-ttu-id="4f232-105">如果选择了切片器项, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="4f232-105">True if the slicer item is selected.</span></span> <span data-ttu-id="4f232-106">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="4f232-106">Setting this value will not clear other SlicerItems' selected state.</span></span>
+    <span data-ttu-id="395d8-105">如果选择了切片器项, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="395d8-105">True if the slicer item is selected.</span></span> <span data-ttu-id="395d8-106">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="395d8-106">Setting this value will not clear other SlicerItems' selected state.</span></span> <span data-ttu-id="395d8-107">默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。</span><span class="sxs-lookup"><span data-stu-id="395d8-107">By default, if the slicer item is the only one selected, when it is deselected, all items will be selected.</span></span>
 
 
-    <span data-ttu-id="4f232-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4f232-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="395d8-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="395d8-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isSelected
   fullName: isSelected
@@ -73,10 +73,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemLoadOptions.key
   summary: >-
-    <span data-ttu-id="4f232-108">表示表示切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="4f232-108">Represents the unique value representing the slicer item.</span></span>
+    <span data-ttu-id="395d8-109">表示表示切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="395d8-109">Represents the unique value representing the slicer item.</span></span>
 
 
-    <span data-ttu-id="4f232-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4f232-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="395d8-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="395d8-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: key
   fullName: key
@@ -90,10 +90,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemLoadOptions.name
   summary: >-
-    <span data-ttu-id="4f232-110">表示显示在 UI 上的值。</span><span class="sxs-lookup"><span data-stu-id="4f232-110">Represents the value displayed on UI.</span></span>
+    <span data-ttu-id="395d8-111">表示显示在 UI 上的值。</span><span class="sxs-lookup"><span data-stu-id="395d8-111">Represents the value displayed on UI.</span></span>
 
 
-    <span data-ttu-id="4f232-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4f232-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="395d8-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="395d8-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: name
   fullName: name
