--- a/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: abd3ac819f85f5088f53b6f7581b040d84100c64
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 42ffbc75e9f6f41d498da2352802fe2230a36a75
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107195"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30302918"
 items:
 - uid: excel.Excel.Interfaces.SlicerItemUpdateData
-  summary: <span data-ttu-id="2c1e8-101">用于更新 SlicerItem 对象上的数据的接口, 用于在 "SlicerItem" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="2c1e8-101">An interface for updating data on the SlicerItem object, for use in "slicerItem.set(<!-- -->{ ... }<!-- -->)".</span></span>
+  summary: <span data-ttu-id="66e36-101">用于更新 SlicerItem 对象上的数据的接口, 用于在 "SlicerItem" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="66e36-101">An interface for updating data on the SlicerItem object, for use in "slicerItem.set(<!-- -->{ ... }<!-- -->)".</span></span>
   name: Excel.Interfaces.SlicerItemUpdateData
   fullName: Excel.Interfaces.SlicerItemUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - excel.Excel.Interfaces.SlicerItemUpdateData.isSelected
 - uid: excel.Excel.Interfaces.SlicerItemUpdateData.isSelected
   summary: >-
-    <span data-ttu-id="2c1e8-102">如果选择了切片器项, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="2c1e8-102">True if the slicer item is selected.</span></span> <span data-ttu-id="2c1e8-103">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="2c1e8-103">Setting this value will not clear other SlicerItems' selected state.</span></span>
+    <span data-ttu-id="66e36-102">如果选择了切片器项, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="66e36-102">True if the slicer item is selected.</span></span> <span data-ttu-id="66e36-103">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="66e36-103">Setting this value will not clear other SlicerItems' selected state.</span></span> <span data-ttu-id="66e36-104">默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。</span><span class="sxs-lookup"><span data-stu-id="66e36-104">By default, if the slicer item is the only one selected, when it is deselected, all items will be selected.</span></span>
 
 
-    <span data-ttu-id="2c1e8-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2c1e8-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="66e36-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="66e36-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isSelected
   fullName: isSelected
