--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicerloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicerloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b7a7973f0fa3af9de400ef995e7495c7c5dea171
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 32b9143ff33c48f1a79bb53da01cf2b2fb65dbbf
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111864"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303135"
 items:
 - uid: excel.Excel.Interfaces.SlicerLoadOptions
   summary: >-
-    <span data-ttu-id="06068-101">表示工作簿中的切片器对象。</span><span class="sxs-lookup"><span data-stu-id="06068-101">Represents a slicer object in the workbook.</span></span>
+    <span data-ttu-id="c1963-101">表示工作簿中的切片器对象。</span><span class="sxs-lookup"><span data-stu-id="c1963-101">Represents a slicer object in the workbook.</span></span>
 
 
-    <span data-ttu-id="06068-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.Interfaces.SlicerLoadOptions
   fullName: Excel.Interfaces.SlicerLoadOptions
@@ -47,10 +47,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.caption
   summary: >-
-    <span data-ttu-id="06068-103">代表切片器的标题。</span><span class="sxs-lookup"><span data-stu-id="06068-103">Represents the caption of slicer.</span></span>
+    <span data-ttu-id="c1963-103">代表切片器的标题。</span><span class="sxs-lookup"><span data-stu-id="c1963-103">Represents the caption of slicer.</span></span>
 
 
-    <span data-ttu-id="06068-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: caption
   fullName: caption
@@ -64,10 +64,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.height
   summary: >-
-    <span data-ttu-id="06068-105">表示切片器的高度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="06068-105">Represents the height, in points, of the slicer.</span></span> <span data-ttu-id="06068-106">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="06068-106">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
+    <span data-ttu-id="c1963-105">表示切片器的高度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="c1963-105">Represents the height, in points, of the slicer.</span></span> <span data-ttu-id="c1963-106">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="c1963-106">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
 
 
-    <span data-ttu-id="06068-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: height
   fullName: height
@@ -81,10 +81,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.id
   summary: >-
-    <span data-ttu-id="06068-108">表示切片器的唯一 id。</span><span class="sxs-lookup"><span data-stu-id="06068-108">Represents the unique id of slicer.</span></span> <span data-ttu-id="06068-109">只读。</span><span class="sxs-lookup"><span data-stu-id="06068-109">Read-only.</span></span>
+    <span data-ttu-id="c1963-108">表示切片器的唯一 id。</span><span class="sxs-lookup"><span data-stu-id="c1963-108">Represents the unique id of slicer.</span></span> <span data-ttu-id="c1963-109">只读。</span><span class="sxs-lookup"><span data-stu-id="c1963-109">Read-only.</span></span>
 
 
-    <span data-ttu-id="06068-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: id
   fullName: id
@@ -98,10 +98,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.isFilterCleared
   summary: >-
-    <span data-ttu-id="06068-111">如此如果已清除当前在切片器上应用的所有筛选器。</span><span class="sxs-lookup"><span data-stu-id="06068-111">True if all filters currently applied on the slicer is cleared.</span></span>
+    <span data-ttu-id="c1963-111">如此如果已清除当前在切片器上应用的所有筛选器。</span><span class="sxs-lookup"><span data-stu-id="c1963-111">True if all filters currently applied on the slicer is cleared.</span></span>
 
 
-    <span data-ttu-id="06068-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: isFilterCleared
   fullName: isFilterCleared
@@ -115,10 +115,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.left
   summary: >-
-    <span data-ttu-id="06068-113">表示从切片器左侧到工作表左侧的距离 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="06068-113">Represents the distance, in points, from the left side of the slicer to the left of the worksheet.</span></span> <span data-ttu-id="06068-114">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="06068-114">Throws an invalid argument exception when set with negative value as input.</span></span>
+    <span data-ttu-id="c1963-113">表示从切片器左侧到工作表左侧的距离 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="c1963-113">Represents the distance, in points, from the left side of the slicer to the left of the worksheet.</span></span> <span data-ttu-id="c1963-114">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="c1963-114">Throws an invalid argument exception when set with negative value as input.</span></span>
 
 
-    <span data-ttu-id="06068-115">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-115">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-115">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-115">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: left
   fullName: left
@@ -132,10 +132,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.name
   summary: >-
-    <span data-ttu-id="06068-116">表示切片器的名称。</span><span class="sxs-lookup"><span data-stu-id="06068-116">Represents the name of slicer.</span></span>
+    <span data-ttu-id="c1963-116">表示切片器的名称。</span><span class="sxs-lookup"><span data-stu-id="c1963-116">Represents the name of slicer.</span></span>
 
 
-    <span data-ttu-id="06068-117">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-117">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-117">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-117">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: name
   fullName: name
@@ -149,10 +149,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.nameInFormula
   summary: >-
-    <span data-ttu-id="06068-118">代表公式中使用的名称。</span><span class="sxs-lookup"><span data-stu-id="06068-118">Represents the name used in the formula.</span></span>
+    <span data-ttu-id="c1963-118">代表公式中使用的名称。</span><span class="sxs-lookup"><span data-stu-id="c1963-118">Represents the name used in the formula.</span></span>
 
 
-    <span data-ttu-id="06068-119">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-119">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-119">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-119">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: nameInFormula
   fullName: nameInFormula
@@ -166,10 +166,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.sortBy
   summary: >-
-    <span data-ttu-id="06068-120">代表切片器中项目的排序顺序。</span><span class="sxs-lookup"><span data-stu-id="06068-120">Represents the sort order of the items in the slicer.</span></span>
+    <span data-ttu-id="c1963-120">代表切片器中项目的排序顺序。</span><span class="sxs-lookup"><span data-stu-id="c1963-120">Represents the sort order of the items in the slicer.</span></span> <span data-ttu-id="c1963-121">可能的值包括: DataSourceOrder、升序、降序。</span><span class="sxs-lookup"><span data-stu-id="c1963-121">Possible values are: DataSourceOrder, Ascending, Descending.</span></span>
 
 
-    <span data-ttu-id="06068-121">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-121">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-122">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-122">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: sortBy
   fullName: sortBy
@@ -183,10 +183,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.style
   summary: >-
-    <span data-ttu-id="06068-122">表示切片器样式的常量值。</span><span class="sxs-lookup"><span data-stu-id="06068-122">Constant value that represents the Slicer style.</span></span> <span data-ttu-id="06068-123">可能的值包括: SlicerStyleLight1 到 SlicerStyleLight6、TableStyleOther1 到 TableStyleOther2、SlicerStyleDark1 到 SlicerStyleDark6。</span><span class="sxs-lookup"><span data-stu-id="06068-123">Possible values are: SlicerStyleLight1 thru SlicerStyleLight6, TableStyleOther1 thru TableStyleOther2, SlicerStyleDark1 thru SlicerStyleDark6.</span></span> <span data-ttu-id="06068-124">还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="06068-124">A custom user-defined style present in the workbook can also be specified.</span></span>
+    <span data-ttu-id="c1963-123">表示切片器样式的常量值。</span><span class="sxs-lookup"><span data-stu-id="c1963-123">Constant value that represents the Slicer style.</span></span> <span data-ttu-id="c1963-124">可能的值包括: SlicerStyleLight1 到 SlicerStyleLight6、TableStyleOther1 到 TableStyleOther2、SlicerStyleDark1 到 SlicerStyleDark6。</span><span class="sxs-lookup"><span data-stu-id="c1963-124">Possible values are: SlicerStyleLight1 thru SlicerStyleLight6, TableStyleOther1 thru TableStyleOther2, SlicerStyleDark1 thru SlicerStyleDark6.</span></span> <span data-ttu-id="c1963-125">还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="c1963-125">A custom user-defined style present in the workbook can also be specified.</span></span>
 
 
-    <span data-ttu-id="06068-125">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-125">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-126">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-126">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: style
   fullName: style
@@ -200,10 +200,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.top
   summary: >-
-    <span data-ttu-id="06068-126">表示从工作表右侧切片器的上边缘的距离 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="06068-126">Represents the distance, in points, from the top edge of the slicer to the right of the worksheet.</span></span> <span data-ttu-id="06068-127">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="06068-127">Throws an invalid argument exception when set with negative value as input.</span></span>
+    <span data-ttu-id="c1963-127">表示从切片器的上边缘到工作表顶部的距离 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="c1963-127">Represents the distance, in points, from the top edge of the slicer to the top of the worksheet.</span></span> <span data-ttu-id="c1963-128">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="c1963-128">Throws an invalid argument exception when set with negative value as input.</span></span>
 
 
-    <span data-ttu-id="06068-128">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-128">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-129">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-129">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: top
   fullName: top
@@ -217,10 +217,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.width
   summary: >-
-    <span data-ttu-id="06068-129">表示切片器的宽度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="06068-129">Represents the width, in points, of the slicer.</span></span> <span data-ttu-id="06068-130">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="06068-130">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
+    <span data-ttu-id="c1963-130">表示切片器的宽度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="c1963-130">Represents the width, in points, of the slicer.</span></span> <span data-ttu-id="c1963-131">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="c1963-131">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
 
 
-    <span data-ttu-id="06068-131">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-131">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-132">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-132">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: width
   fullName: width
@@ -234,10 +234,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.worksheet
   summary: >-
-    <span data-ttu-id="06068-132">表示包含切片器的工作表。</span><span class="sxs-lookup"><span data-stu-id="06068-132">Represents the worksheet containing the slicer.</span></span>
+    <span data-ttu-id="c1963-133">表示包含切片器的工作表。</span><span class="sxs-lookup"><span data-stu-id="c1963-133">Represents the worksheet containing the slicer.</span></span>
 
 
-    <span data-ttu-id="06068-133">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="06068-133">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c1963-134">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c1963-134">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: worksheet
   fullName: worksheet
