--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicerupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicerupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0a7419efcbd4e66daf5a7106bd8d29ebce70911a
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: f4072a38aba437932e9545e3c4ac53075a9a7278
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111276"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303051"
 items:
 - uid: excel.Excel.Interfaces.SlicerUpdateData
-  summary: <span data-ttu-id="d82cf-101">一个用于更新切片器对象上的数据的接口, 用于在 "切片器"<!-- -->中使用。 set ({...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="d82cf-101">An interface for updating data on the Slicer object, for use in "slicer.set(<!-- -->{ ... }<!-- -->)".</span></span>
+  summary: <span data-ttu-id="f1cb6-101">一个用于更新切片器对象上的数据的接口, 用于在 "切片器"<!-- -->中使用。 set ({...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="f1cb6-101">An interface for updating data on the Slicer object, for use in "slicer.set(<!-- -->{ ... }<!-- -->)".</span></span>
   name: Excel.Interfaces.SlicerUpdateData
   fullName: Excel.Interfaces.SlicerUpdateData
   langs:
@@ -27,10 +27,10 @@ items:
   - excel.Excel.Interfaces.SlicerUpdateData.worksheet
 - uid: excel.Excel.Interfaces.SlicerUpdateData.caption
   summary: >-
-    <span data-ttu-id="d82cf-102">代表切片器的标题。</span><span class="sxs-lookup"><span data-stu-id="d82cf-102">Represents the caption of slicer.</span></span>
+    <span data-ttu-id="f1cb6-102">代表切片器的标题。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-102">Represents the caption of slicer.</span></span>
 
 
-    <span data-ttu-id="d82cf-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d82cf-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f1cb6-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1cb6-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: caption
   fullName: caption
@@ -44,10 +44,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.SlicerUpdateData.height
   summary: >-
-    <span data-ttu-id="d82cf-104">表示切片器的高度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="d82cf-104">Represents the height, in points, of the slicer.</span></span> <span data-ttu-id="d82cf-105">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="d82cf-105">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
+    <span data-ttu-id="f1cb6-104">表示切片器的高度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-104">Represents the height, in points, of the slicer.</span></span> <span data-ttu-id="f1cb6-105">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-105">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
 
 
-    <span data-ttu-id="d82cf-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d82cf-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f1cb6-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1cb6-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: height
   fullName: height
@@ -61,10 +61,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.SlicerUpdateData.left
   summary: >-
-    <span data-ttu-id="d82cf-107">表示从切片器左侧到工作表左侧的距离 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="d82cf-107">Represents the distance, in points, from the left side of the slicer to the left of the worksheet.</span></span> <span data-ttu-id="d82cf-108">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="d82cf-108">Throws an invalid argument exception when set with negative value as input.</span></span>
+    <span data-ttu-id="f1cb6-107">表示从切片器左侧到工作表左侧的距离 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-107">Represents the distance, in points, from the left side of the slicer to the left of the worksheet.</span></span> <span data-ttu-id="f1cb6-108">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-108">Throws an invalid argument exception when set with negative value as input.</span></span>
 
 
-    <span data-ttu-id="d82cf-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d82cf-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f1cb6-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1cb6-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: left
   fullName: left
@@ -78,10 +78,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.SlicerUpdateData.name
   summary: >-
-    <span data-ttu-id="d82cf-110">表示切片器的名称。</span><span class="sxs-lookup"><span data-stu-id="d82cf-110">Represents the name of slicer.</span></span>
+    <span data-ttu-id="f1cb6-110">表示切片器的名称。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-110">Represents the name of slicer.</span></span>
 
 
-    <span data-ttu-id="d82cf-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d82cf-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f1cb6-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1cb6-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: name
   fullName: name
@@ -95,10 +95,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.SlicerUpdateData.nameInFormula
   summary: >-
-    <span data-ttu-id="d82cf-112">代表公式中使用的名称。</span><span class="sxs-lookup"><span data-stu-id="d82cf-112">Represents the name used in the formula.</span></span>
+    <span data-ttu-id="f1cb6-112">代表公式中使用的名称。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-112">Represents the name used in the formula.</span></span>
 
 
-    <span data-ttu-id="d82cf-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d82cf-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f1cb6-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1cb6-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: nameInFormula
   fullName: nameInFormula
@@ -112,10 +112,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.SlicerUpdateData.sortBy
   summary: >-
-    <span data-ttu-id="d82cf-114">代表切片器中项目的排序顺序。</span><span class="sxs-lookup"><span data-stu-id="d82cf-114">Represents the sort order of the items in the slicer.</span></span>
+    <span data-ttu-id="f1cb6-114">代表切片器中项目的排序顺序。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-114">Represents the sort order of the items in the slicer.</span></span> <span data-ttu-id="f1cb6-115">可能的值包括: DataSourceOrder、升序、降序。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-115">Possible values are: DataSourceOrder, Ascending, Descending.</span></span>
 
 
-    <span data-ttu-id="d82cf-115">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d82cf-115">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f1cb6-116">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1cb6-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: sortBy
   fullName: sortBy
@@ -129,10 +129,10 @@ items:
       - Excel.SlicerSortType | "DataSourceOrder" | "Ascending" | "Descending"
 - uid: excel.Excel.Interfaces.SlicerUpdateData.style
   summary: >-
-    <span data-ttu-id="d82cf-116">表示切片器样式的常量值。</span><span class="sxs-lookup"><span data-stu-id="d82cf-116">Constant value that represents the Slicer style.</span></span> <span data-ttu-id="d82cf-117">可能的值包括: SlicerStyleLight1 到 SlicerStyleLight6、TableStyleOther1 到 TableStyleOther2、SlicerStyleDark1 到 SlicerStyleDark6。</span><span class="sxs-lookup"><span data-stu-id="d82cf-117">Possible values are: SlicerStyleLight1 thru SlicerStyleLight6, TableStyleOther1 thru TableStyleOther2, SlicerStyleDark1 thru SlicerStyleDark6.</span></span> <span data-ttu-id="d82cf-118">还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="d82cf-118">A custom user-defined style present in the workbook can also be specified.</span></span>
+    <span data-ttu-id="f1cb6-117">表示切片器样式的常量值。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-117">Constant value that represents the Slicer style.</span></span> <span data-ttu-id="f1cb6-118">可能的值包括: SlicerStyleLight1 到 SlicerStyleLight6、TableStyleOther1 到 TableStyleOther2、SlicerStyleDark1 到 SlicerStyleDark6。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-118">Possible values are: SlicerStyleLight1 thru SlicerStyleLight6, TableStyleOther1 thru TableStyleOther2, SlicerStyleDark1 thru SlicerStyleDark6.</span></span> <span data-ttu-id="f1cb6-119">还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-119">A custom user-defined style present in the workbook can also be specified.</span></span>
 
 
-    <span data-ttu-id="d82cf-119">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d82cf-119">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f1cb6-120">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1cb6-120">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: style
   fullName: style
@@ -146,10 +146,10 @@ items:
       - string
 - uid: excel.Excel.Interfaces.SlicerUpdateData.top
   summary: >-
-    <span data-ttu-id="d82cf-120">表示从工作表右侧切片器的上边缘的距离 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="d82cf-120">Represents the distance, in points, from the top edge of the slicer to the right of the worksheet.</span></span> <span data-ttu-id="d82cf-121">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="d82cf-121">Throws an invalid argument exception when set with negative value as input.</span></span>
+    <span data-ttu-id="f1cb6-121">表示从切片器的上边缘到工作表顶部的距离 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-121">Represents the distance, in points, from the top edge of the slicer to the top of the worksheet.</span></span> <span data-ttu-id="f1cb6-122">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-122">Throws an invalid argument exception when set with negative value as input.</span></span>
 
 
-    <span data-ttu-id="d82cf-122">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d82cf-122">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f1cb6-123">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1cb6-123">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: top
   fullName: top
@@ -163,10 +163,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.SlicerUpdateData.width
   summary: >-
-    <span data-ttu-id="d82cf-123">表示切片器的宽度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="d82cf-123">Represents the width, in points, of the slicer.</span></span> <span data-ttu-id="d82cf-124">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="d82cf-124">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
+    <span data-ttu-id="f1cb6-124">表示切片器的宽度 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-124">Represents the width, in points, of the slicer.</span></span> <span data-ttu-id="f1cb6-125">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-125">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
 
 
-    <span data-ttu-id="d82cf-125">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d82cf-125">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f1cb6-126">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1cb6-126">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: width
   fullName: width
@@ -180,10 +180,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.SlicerUpdateData.worksheet
   summary: >-
-    <span data-ttu-id="d82cf-126">表示包含切片器的工作表。</span><span class="sxs-lookup"><span data-stu-id="d82cf-126">Represents the worksheet containing the slicer.</span></span>
+    <span data-ttu-id="f1cb6-127">表示包含切片器的工作表。</span><span class="sxs-lookup"><span data-stu-id="f1cb6-127">Represents the worksheet containing the slicer.</span></span>
 
 
-    <span data-ttu-id="d82cf-127">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d82cf-127">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f1cb6-128">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1cb6-128">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: worksheet
   fullName: worksheet
