--- a/docs/docs-ref-autogen/excel/excel.worksheetchangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetchangedeventargs.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b5e29cd0789189cb77d7756ea3203a332388944b
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: 096d9015ced3e018d41e4beebfcd4f4747bae882
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29974519"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303107"
 items:
 - uid: excel.Excel.WorksheetChangedEventArgs
   summary: >-
-    <span data-ttu-id="92401-101">提供有关引发 Changed 事件的工作表信息。</span><span class="sxs-lookup"><span data-stu-id="92401-101">Provides information about the worksheet that raised the Changed event.</span></span>
+    <span data-ttu-id="fa5bb-101">提供有关引发 Changed 事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-101">Provides information about the worksheet that raised the Changed event.</span></span>
 
 
-    <span data-ttu-id="92401-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92401-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="fa5bb-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.WorksheetChangedEventArgs
   fullName: Excel.WorksheetChangedEventArgs
   langs:
@@ -23,15 +23,16 @@ items:
   - excel.Excel.WorksheetChangedEventArgs.getRangeOrNullObject
   - excel.Excel.WorksheetChangedEventArgs.address
   - excel.Excel.WorksheetChangedEventArgs.changeType
+  - excel.Excel.WorksheetChangedEventArgs.details
   - excel.Excel.WorksheetChangedEventArgs.source
   - excel.Excel.WorksheetChangedEventArgs.type
   - excel.Excel.WorksheetChangedEventArgs.worksheetId
 - uid: excel.Excel.WorksheetChangedEventArgs.getRange
   summary: >-
-    <span data-ttu-id="92401-103">获取代表特定工作表的更改区域的区域。</span><span class="sxs-lookup"><span data-stu-id="92401-103">Gets the range that represents the changed area of a specific worksheet.</span></span>
+    <span data-ttu-id="fa5bb-103">获取表示特定工作表的更改区域的区域。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-103">Gets the range that represents the changed area of a specific worksheet.</span></span>
 
 
-    <span data-ttu-id="92401-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92401-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="fa5bb-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getRange(ctx)
   fullName: getRange(ctx)
   langs:
@@ -50,10 +51,10 @@ items:
       - excel.Excel.RequestContext
 - uid: excel.Excel.WorksheetChangedEventArgs.getRangeOrNullObject
   summary: >-
-    <span data-ttu-id="92401-105">获取代表特定工作表的更改区域的区域。</span><span class="sxs-lookup"><span data-stu-id="92401-105">Gets the range that represents the changed area of a specific worksheet.</span></span> <span data-ttu-id="92401-106">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="92401-106">It might return null object.</span></span>
+    <span data-ttu-id="fa5bb-105">获取表示特定工作表的更改区域的区域。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-105">Gets the range that represents the changed area of a specific worksheet.</span></span> <span data-ttu-id="fa5bb-106">它可能返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-106">It might return null object.</span></span>
 
 
-    <span data-ttu-id="92401-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92401-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="fa5bb-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getRangeOrNullObject(ctx)
   fullName: getRangeOrNullObject(ctx)
   langs:
@@ -72,10 +73,10 @@ items:
       - excel.Excel.RequestContext
 - uid: excel.Excel.WorksheetChangedEventArgs.address
   summary: >-
-    <span data-ttu-id="92401-108">获取区域地址，该地址表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="92401-108">Gets the range address that represents the changed area of a specific worksheet.</span></span>
+    <span data-ttu-id="fa5bb-108">获取区域地址，该地址表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-108">Gets the range address that represents the changed area of a specific worksheet.</span></span>
 
 
-    <span data-ttu-id="92401-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92401-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="fa5bb-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: address
   fullName: address
   langs:
@@ -88,10 +89,10 @@ items:
       - string
 - uid: excel.Excel.WorksheetChangedEventArgs.changeType
   summary: >-
-    <span data-ttu-id="92401-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="92401-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="92401-111">有关详细信息，请参阅 Excel.DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="92401-111">See Excel.DataChangeType for details.</span></span>
+    <span data-ttu-id="fa5bb-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="fa5bb-111">有关详细信息, 请参阅 DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-111">See Excel.DataChangeType for details.</span></span>
 
 
-    <span data-ttu-id="92401-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92401-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="fa5bb-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: changeType
   fullName: changeType
   langs:
@@ -102,12 +103,28 @@ items:
     return:
       type:
       - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
+- uid: excel.Excel.WorksheetChangedEventArgs.details
+  summary: >-
+    <span data-ttu-id="fa5bb-113">代表有关更改详细信息的信息</span><span class="sxs-lookup"><span data-stu-id="fa5bb-113">Represents the information about the change detail</span></span>
+
+
+    <span data-ttu-id="fa5bb-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+  name: details
+  fullName: details
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'details: Excel.ChangedEventDetail;'
+    return:
+      type:
+      - excel.Excel.ChangedEventDetail
 - uid: excel.Excel.WorksheetChangedEventArgs.source
   summary: >-
-    <span data-ttu-id="92401-113">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="92401-113">Gets the source of the event.</span></span> <span data-ttu-id="92401-114">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="92401-114">See Excel.EventSource for details.</span></span>
+    <span data-ttu-id="fa5bb-115">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-115">Gets the source of the event.</span></span> <span data-ttu-id="fa5bb-116">有关详细信息, 请参阅 "Excel. EventSource"。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-116">See Excel.EventSource for details.</span></span>
 
 
-    <span data-ttu-id="92401-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92401-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="fa5bb-117">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: source
   fullName: source
   langs:
@@ -120,10 +137,10 @@ items:
       - Excel.EventSource | "Local" | "Remote"
 - uid: excel.Excel.WorksheetChangedEventArgs.type
   summary: >-
-    <span data-ttu-id="92401-116">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="92401-116">Gets the type of the event.</span></span> <span data-ttu-id="92401-117">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="92401-117">See Excel.EventType for details.</span></span>
+    <span data-ttu-id="fa5bb-118">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-118">Gets the type of the event.</span></span> <span data-ttu-id="fa5bb-119">有关详细信息, 请参阅 "Excel. 事件"。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-119">See Excel.EventType for details.</span></span>
 
 
-    <span data-ttu-id="92401-118">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92401-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="fa5bb-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: type
   fullName: type
   langs:
@@ -136,10 +153,10 @@ items:
       - "\"WorksheetChanged\""
 - uid: excel.Excel.WorksheetChangedEventArgs.worksheetId
   summary: >-
-    <span data-ttu-id="92401-119">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="92401-119">Gets the id of the worksheet in which the data changed.</span></span>
+    <span data-ttu-id="fa5bb-121">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-121">Gets the id of the worksheet in which the data changed.</span></span>
 
 
-    <span data-ttu-id="92401-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92401-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="fa5bb-122">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: worksheetId
   fullName: worksheetId
   langs:
