--- a/docs/docs-ref-autogen/outlook/office.messageread.yml
+++ b/docs/docs-ref-autogen/outlook/office.messageread.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: fe9e87aa602d6bedeed93349f22113dca3c8aeb4
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: b95bc4e0e282265e30621374508614eda89b7a7f
+ms.sourcegitcommit: 5c1011d5e46e007fd1f7f620d4dff74356dcd029
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303261"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "30359070"
 items:
 - uid: outlook.Office.MessageRead
   summary: >-
@@ -100,7 +100,7 @@ items:
     添加支持事件的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在预览`Office.EventType.AttachmentsChanged`中也受支持。
+    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
