--- a/docs/docs-ref-autogen/outlook_1_2/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.appointmentcompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4da99cc0e9d3e3d8661e0d30ac5155128de3fa57
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 0d319098dfdeb44e0754289afff3272be9c58298
+ms.sourcegitcommit: 5c1011d5e46e007fd1f7f620d4dff74356dcd029
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30093453"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "30358972"
 items:
 - uid: Outlook_1_2.Office.AppointmentCompose
   summary: "\" [context.subname](xref:Outlook_1_2.Office.Item)<!-- -->\" 的约会组织者模式。\n\n**重要说明**: 这是一个内部 Outlook 对象, 而不是直接通过现有接口公开。 应将其视为 \"context.subname\" 模式。 有关详细信息, 请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.2/office.context.mailbox.item)页。"
@@ -20,20 +20,15 @@ items:
   children:
   - Outlook_1_2.Office.AppointmentCompose.addFileAttachmentAsync
   - Outlook_1_2.Office.AppointmentCompose.addFileAttachmentAsync_1
-  - Outlook_1_2.Office.AppointmentCompose.addFileAttachmentAsync_2
   - Outlook_1_2.Office.AppointmentCompose.addItemAttachmentAsync
   - Outlook_1_2.Office.AppointmentCompose.addItemAttachmentAsync_1
-  - Outlook_1_2.Office.AppointmentCompose.addItemAttachmentAsync_2
   - Outlook_1_2.Office.AppointmentCompose.getSelectedDataAsync
   - Outlook_1_2.Office.AppointmentCompose.getSelectedDataAsync_1
   - Outlook_1_2.Office.AppointmentCompose.loadCustomPropertiesAsync
-  - Outlook_1_2.Office.AppointmentCompose.loadCustomPropertiesAsync_1
   - Outlook_1_2.Office.AppointmentCompose.removeAttachmentAsync
   - Outlook_1_2.Office.AppointmentCompose.removeAttachmentAsync_1
-  - Outlook_1_2.Office.AppointmentCompose.removeAttachmentAsync_2
   - Outlook_1_2.Office.AppointmentCompose.setSelectedDataAsync
   - Outlook_1_2.Office.AppointmentCompose.setSelectedDataAsync_1
-  - Outlook_1_2.Office.AppointmentCompose.setSelectedDataAsync_2
   - Outlook_1_2.Office.AppointmentCompose.body
   - Outlook_1_2.Office.AppointmentCompose.end
   - Outlook_1_2.Office.AppointmentCompose.itemType
@@ -86,7 +81,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'addFileAttachmentAsync(uri: string, attachmentName: string, options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<string>) => void): void;'
+    content: 'addFileAttachmentAsync(uri: string, attachmentName: string, options?: Office.AsyncContextOptions & { isInline: boolean }, callback?: (asyncResult: Office.AsyncResult<string>) => void): void;'
     return:
       type:
       - void
@@ -103,45 +98,12 @@ items:
     - id: options
       description: '可选。 包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。 isInline: 如果为 true, 则表示附件将在邮件正文中以内联方式显示, 并且不应显示在附件列表中。'
       type:
-      - Office.AsyncContextOptions
+      - 'Office.AsyncContextOptions & { isInline: boolean }'
     - id: callback
-      description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败，asyncResult 对象将包含一个 Error 对象，提供错误描述。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败，asyncResult 对象将包含一个 Error 对象，提供错误描述。
       type:
-      - '(result: Office.AsyncResult<string>) => void'
+      - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_2.Office.AppointmentCompose.addFileAttachmentAsync_1
-  summary: >-
-    将文件作为附件添加到邮件或约会。
-
-
-    addFileAttachmentAsync 方法在指定的 URI 上载文件并将其附加到撰写窗体中的项目。
-
-
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
-
-
-    \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadWriteItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr> <tr><td>错误</td><td>AttachmentSizeExceeded-附件大于允许的大小。</td></tr> <tr><td></td><td>FileTypeNotSupported-附件的分机号不允许。</td></tr> <tr><td></td><td>NumberOfAttachmentsExceeded-邮件或约会的附件过多。</td></tr> </table>
-  name: addFileAttachmentAsync(uri, attachmentName)
-  fullName: addFileAttachmentAsync(uri, attachmentName)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'addFileAttachmentAsync(uri: string, attachmentName: string): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: uri
-      description: 提供附加到邮件或约会的文件的位置的 URI。最大长度为 2048 个字符。
-      type:
-      - string
-    - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
-      type:
-      - string
-- uid: Outlook_1_2.Office.AppointmentCompose.addFileAttachmentAsync_2
   summary: >-
     将文件作为附件添加到邮件或约会。
 
@@ -160,7 +122,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'addFileAttachmentAsync(uri: string, attachmentName: string, callback: (result: Office.AsyncResult<string>) => void): void;'
+    content: 'addFileAttachmentAsync(uri: string, attachmentName: string, callback?: (asyncResult: Office.AsyncResult<string>) => void): void;'
     return:
       type:
       - void
@@ -175,9 +137,9 @@ items:
       type:
       - string
     - id: callback
-      description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败，asyncResult 对象将包含一个 Error 对象，提供错误描述。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败，asyncResult 对象将包含一个 Error 对象，提供错误描述。
       type:
-      - '(result: Office.AsyncResult<string>) => void'
+      - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_2.Office.AppointmentCompose.addItemAttachmentAsync
   summary: >-
     将 Exchange 项目（如邮件）作为附件添加到邮件或约会。
@@ -231,7 +193,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'addItemAttachmentAsync(itemId: any, attachmentName: string, options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<string>) => void): void;'
+    content: 'addItemAttachmentAsync(itemId: any, attachmentName: string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<string>) => void): void;'
     return:
       type:
       - void
@@ -246,50 +208,14 @@ items:
       type:
       - string
     - id: options
-      description: '包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
+      description: '可选。 包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
       type:
       - Office.AsyncContextOptions
     - id: callback
-      description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果添加附件失败, asyncResult 对象将包含一个 error 对象, 该对象提供错误说明。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果添加附件失败, asyncResult 对象将包含一个 error 对象, 该对象提供错误说明。
       type:
-      - '(result: Office.AsyncResult<string>) => void'
+      - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_2.Office.AppointmentCompose.addItemAttachmentAsync_1
-  summary: >-
-    将 Exchange 项目（如邮件）作为附件添加到邮件或约会。
-
-
-    addItemAttachmentAsync 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。如果您指定一个回调方法，此方法使用一个 asyncResult 参数调用，该参数包含一个附件标识符或代码，指示附加项目过程中出现的任何错误。您可以使用 options 参数将状态信息传递给回调方法（如果需要）。
-
-
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
-
-
-    如果 Office 外接程序在 Outlook Web App 中运行，则 addItemAttachmentAsync 方法可以将项目添加到项目（正在编辑的项目除外）中；然而，不支持也不建议这样做。
-
-
-    \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadWriteItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr> <tr><td>错误</td><td>NumberOfAttachmentsExceeded-邮件或约会的附件过多。</td></tr> </table>
-  name: addItemAttachmentAsync(itemId, attachmentName)
-  fullName: addItemAttachmentAsync(itemId, attachmentName)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'addItemAttachmentAsync(itemId: any, attachmentName: string): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: itemId
-      description: 要附加的项目的 Exchange 标识符。最大长度为 100 个字符。
-      type:
-      - any
-    - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
-      type:
-      - string
-- uid: Outlook_1_2.Office.AppointmentCompose.addItemAttachmentAsync_2
   summary: >-
     将 Exchange 项目（如邮件）作为附件添加到邮件或约会。
 
@@ -311,7 +237,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'addItemAttachmentAsync(itemId: any, attachmentName: string, callback: (result: Office.AsyncResult<string>) => void): void;'
+    content: 'addItemAttachmentAsync(itemId: any, attachmentName: string, callback?: (asyncResult: Office.AsyncResult<string>) => void): void;'
     return:
       type:
       - void
@@ -326,9 +252,9 @@ items:
       type:
       - string
     - id: callback
-      description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果添加附件失败, asyncResult 对象将包含一个 error 对象, 该对象提供错误说明。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果添加附件失败, asyncResult 对象将包含一个 error 对象, 该对象提供错误说明。
       type:
-      - '(result: Office.AsyncResult<string>) => void'
+      - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_2.Office.AppointmentCompose.getSelectedDataAsync
   summary: >-
     以异步方式返回邮件的主题或正文中选定的数据。
@@ -375,7 +301,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getSelectedDataAsync(coercionType: Office.CoercionType, options: Office.AsyncContextOptions, callback: (result: Office.AsyncResult<any>) => void): void;'
+    content: 'getSelectedDataAsync(coercionType: Office.CoercionType, options: Office.AsyncContextOptions, callback: (asyncResult: Office.AsyncResult<any>) => void): void;'
     return:
       type:
       - void
@@ -392,7 +318,7 @@ items:
     - id: callback
       description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
-      - '(result: Office.AsyncResult<any>) => void'
+      - '(asyncResult: Office.AsyncResult<any>) => void'
 - uid: Outlook_1_2.Office.AppointmentCompose.getSelectedDataAsync_1
   summary: >-
     以异步方式返回邮件的主题或正文中选定的数据。
@@ -412,7 +338,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getSelectedDataAsync(coercionType: Office.CoercionType, callback: (result: Office.AsyncResult<string>) => void): void;'
+    content: 'getSelectedDataAsync(coercionType: Office.CoercionType, callback: (asyncResult: Office.AsyncResult<string>) => void): void;'
     return:
       type:
       - void
@@ -425,7 +351,7 @@ items:
     - id: callback
       description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
-      - '(result: Office.AsyncResult<string>) => void'
+      - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_2.Office.AppointmentCompose.loadCustomPropertiesAsync
   summary: >-
     异步加载所选项目上此外接程序的自定义属性。
@@ -445,7 +371,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'loadCustomPropertiesAsync(callback: (result: Office.AsyncResult<CustomProperties>) => void, userContext?: any): void;'
+    content: 'loadCustomPropertiesAsync(callback: (asyncResult: Office.AsyncResult<CustomProperties>) => void, userContext?: any): void;'
     return:
       type:
       - void
@@ -454,40 +380,11 @@ items:
     - id: callback
       description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
-      - '(result: Office.AsyncResult<CustomProperties>) => void'
+      - '(asyncResult: Office.AsyncResult<CustomProperties>) => void'
     - id: userContext
       description: 可选。 开发人员可以提供他们想要在回调函数中访问的任何对象。 此对象可以通过回调函数中的 asyncContext 属性来访问。
       type:
       - any
-- uid: Outlook_1_2.Office.AppointmentCompose.loadCustomPropertiesAsync_1
-  summary: >-
-    异步加载所选项目上此外接程序的自定义属性。
-
-
-    自定义属性基于每个应用、每个项目存储为键/值对。此方法在回调中返回 CustomProperties，该回调提供访问特定于当前项目和当前外接程序的自定义属性的方法。自定义属性未在项目上加密，因此这不应用作安全存储。
-
-
-    自定义属性作为 asyncResult.value 属性中的 CustomProperties 对象提供。此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
-
-
-    \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr> </table>
-  name: loadCustomPropertiesAsync(callback)
-  fullName: loadCustomPropertiesAsync(callback)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'loadCustomPropertiesAsync(callback: (result: Office.AsyncResult<CustomProperties>) => void): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: callback
-      description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
-      type:
-      - '(result: Office.AsyncResult<CustomProperties>) => void'
 - uid: Outlook_1_2.Office.AppointmentCompose.removeAttachmentAsync
   summary: >-
     将附件从邮件或约会中删除。
@@ -523,7 +420,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'removeAttachmentAsync(attachmentId: string, options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'removeAttachmentAsync(attachmentId: string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -540,34 +437,8 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 如果删除附件失败, asyncResult 属性将包含失败原因的错误代码。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_2.Office.AppointmentCompose.removeAttachmentAsync_1
-  summary: >-
-    将附件从邮件或约会中删除。
-
-
-    removeAttachmentAsync 方法从项中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 当用户关闭应用，或者如果用户开始在内嵌窗体中撰写，则随后弹出的窗体中继续在单独的窗口撰写时，会话即结束。
-
-
-    \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadWriteItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr> <tr><td>错误</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr> </table>
-  name: removeAttachmentAsync(attachmentId)
-  fullName: removeAttachmentAsync(attachmentId)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'removeAttachmentAsync(attachmentId: string): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: attachmentId
-      description: 要删除的附件的标识符。
-      type:
-      - string
-- uid: Outlook_1_2.Office.AppointmentCompose.removeAttachmentAsync_2
   summary: >-
     将附件从邮件或约会中删除。
 
@@ -583,7 +454,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'removeAttachmentAsync(attachmentId: string, callback: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'removeAttachmentAsync(attachmentId: string, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -596,7 +467,7 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 如果删除附件失败, asyncResult 属性将包含失败原因的错误代码。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_2.Office.AppointmentCompose.setSelectedDataAsync
   summary: >-
     以异步方式将数据插入到邮件的正文或主题中。
@@ -606,14 +477,24 @@ items:
 
 
     \[[API 集: 邮箱 1.2](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadWriteItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr> <tr><td>错误</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr> </table>
+  remarks: >-
+    <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadWriteItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr> <tr><td>错误</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr> </table>
+
+    ####说明
+
+
+    ```javascript
+
+    Office.context.mailbox.item.setSelectedDataAsync("<b>Hello World!</b>", { coercionType : "html" });
+
+    ```
   name: setSelectedDataAsync(data, options, callback)
   fullName: setSelectedDataAsync(data, options, callback)
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'setSelectedDataAsync(data: string, options?: Office.AsyncContextOptions & CoercionTypeOptions, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'setSelectedDataAsync(data: string, options?: Office.AsyncContextOptions & CoercionTypeOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -630,7 +511,7 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_2.Office.AppointmentCompose.setSelectedDataAsync_1
   summary: >-
     以异步方式将数据插入到邮件的正文或主题中。
@@ -651,39 +532,13 @@ items:
     Office.context.mailbox.item.setSelectedDataAsync("Hello World!");
 
     ```
-  name: setSelectedDataAsync(data)
-  fullName: setSelectedDataAsync(data)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'setSelectedDataAsync(data: string): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: data
-      description: 要插入的数据。数据不得超过 1,000,000 个字符。如果传入的数据超过 1,000,000 个字符，则会引发 ArgumentOutOfRange 异常。
-      type:
-      - string
-- uid: Outlook_1_2.Office.AppointmentCompose.setSelectedDataAsync_2
-  summary: >-
-    以异步方式将数据插入到邮件的正文或主题中。
-
-
-    document.setselecteddataasync 方法将指定的字符串插入到项目的主题或正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果游标不在 body 或 subject 字段中, 则返回错误。 插入后, 光标放置在插入内容的末尾。
-
-
-    \[[API 集: 邮箱 1.2](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadWriteItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr> <tr><td>错误</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr> </table>
   name: setSelectedDataAsync(data, callback)
   fullName: setSelectedDataAsync(data, callback)
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'setSelectedDataAsync(data: string, callback: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'setSelectedDataAsync(data: string, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -696,7 +551,7 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_2.Office.AppointmentCompose.body
   summary: >-
     获取一个提供用于处理项目正文的方法的对象。
