--- a/docs/docs-ref-autogen/outlook_1_2/office.itemcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.itemcompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: fef16f62752a3aef3f08a6a14fab9899ed38341a
-ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
+ms.openlocfilehash: cb762d427a5a2c48416b6449226ac7c7a161f7e6
+ms.sourcegitcommit: 5c1011d5e46e007fd1f7f620d4dff74356dcd029
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/22/2019
-ms.locfileid: "30198659"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "30358839"
 items:
 - uid: Outlook_1_2.Office.ItemCompose
   summary: "\" [context.subname](xref:Outlook_1_2.Office.Item)<!-- -->\" 的撰写模式。\n\n**重要说明**: 这是一个内部 Outlook 对象, 而不是直接通过现有接口公开。 应将其视为 \"context.subname\" 模式。 有关详细信息, 请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.2/office.context.mailbox.item)页。"
@@ -340,7 +340,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'setSelectedDataAsync(data: string, options: Office.AsyncContextOptions & CoercionTypeOptions, callback: (asyncResult: Office.AsyncResult<void>) => void): void;'
+    content: 'setSelectedDataAsync(data: string, options?: Office.AsyncContextOptions & CoercionTypeOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -351,11 +351,11 @@ items:
       type:
       - string
     - id: options
-      description: '包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。 coercionType: 如果为文本, 则在 outlook Web App 和 outlook 中应用当前样式。 如果该字段是 HTML 编辑器，则仅插入文本数据，即使数据为 HTML。 如果 html 和字段支持 html (主题不), 则在 outlook Web App 中应用当前样式, 并在 outlook 中应用默认样式。 如果字段是文本字段, 则返回一个 InvalidDataFormat 错误。 如果未设置 coercionType，则结果取决于字段：如果该字段为 HTML，则使用 HTML；如果该字段为文本，则使用纯文本。'
+      description: '可选。 包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。 coercionType: 如果为文本, 则在 outlook Web App 和 outlook 中应用当前样式。 如果该字段是 HTML 编辑器，则仅插入文本数据，即使数据为 HTML。 如果 html 和字段支持 html (主题不), 则在 outlook Web App 中应用当前样式, 并在 outlook 中应用默认样式。 如果字段是文本字段, 则返回一个 InvalidDataFormat 错误。 如果未设置 coercionType，则结果取决于字段：如果该字段为 HTML，则使用 HTML；如果该字段为文本，则使用纯文本。'
       type:
       - Office.AsyncContextOptions & CoercionTypeOptions
     - id: callback
-      description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
       - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_2.Office.ItemCompose.setSelectedDataAsync_1
@@ -374,7 +374,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'setSelectedDataAsync(data: string, callback: (asyncResult: Office.AsyncResult<void>) => void): void;'
+    content: 'setSelectedDataAsync(data: string, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -385,7 +385,7 @@ items:
       type:
       - string
     - id: callback
-      description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
       - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_2.Office.ItemCompose.subject
